deployment/sit/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: pep-sit
  labels:
    app: frontend
    environment: sit
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
